# teaching_rm_pico

./: .gitmodules  CMakeLists.txt  README.md  diagram.json  dji_remote.chip.json  linux_init.sh  main.cpp  windows_install.ps1  wokwi.sample_test.yaml  wokwi.toml
.github/workflows/: ci.yaml  gh-pages.yml
test/: wokwi.sample_test.yaml
